Correctly handle text overflow in departure cards

--- a/src/app/departure-card/departure-card.component.scss
+++ b/src/app/departure-card/departure-card.component.scss
@@ -2,6 +2,11 @@ ion-item {
     --inner-border-width: 0;
 }
 
+ion-card-title.ion-text-nowrap {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 ion-card-content {
     padding-top: 0px;
 }
