--- a/src/app/departure-item/departure-item.component.scss
+++ b/src/app/departure-item/departure-item.component.scss
@@ -2,6 +2,11 @@ ion-avatar {
     --border-radius: 0px;
 }
 
+ion-note {
+    color: #000;
+    padding: 12px 0 10px 0;
+}
+
 .color-on-time {
     color: var(--ion-color-success-shade);
 }
